--- a/public/frontend/css/login.css
+++ b/public/frontend/css/login.css
@@ -217,5 +217,7 @@
     color:white;
     font-size: 15px;
     border-radius: 5px;
-    padding: 5px 10px;
+  }
+  .welcome{
+    text-align: center;
   }
