--- a/public/frontend/css/navside.css
+++ b/public/frontend/css/navside.css
@@ -6,6 +6,13 @@
      box-sizing: border-box;
      font-family: 'Poppins', sans-serif;
    }
+   :root {
+    --primary:#0E1B4E;
+    --danger: #F70E0E;
+    --grey: #e9e9e9;
+    --black: #000000;
+    --white:#ffff;
+}
    .sidebar{
      position: fixed;
      top: 0;
