--- a/public/frontend/css/navside.css
+++ b/public/frontend/css/navside.css
@@ -231,10 +231,11 @@
      height: 60px;
      display: flex;
      align-items: center;
+     background-color: var(--primary);
    }
    .home-section .home-content .bx-menu,
    .home-section .home-content .text{
-     color: #11101d;
+     color: white;
      font-size: 35px;
    }
    .home-section .home-content .bx-menu{
