--- a/public/frontend/css/etudiant.css
+++ b/public/frontend/css/etudiant.css
@@ -1,23 +1,20 @@
-.btn_row{
+.container .header_part{
+    background-color: white;
+    box-shadow: 0px 0px 10px 1px rgba(7, 7, 7, 0.103);
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
-    padding: 10px 0px;
-    background-color: white;
-    border-radius: 10px;
-    margin:10px 50px 0px 50px;
-    box-shadow: 0px 0px 10px 1px rgba(7, 7, 7, 0.103);
 }
-.btn_row button{
-    background-color: var(--primary);
-    color: white;
-    padding: 10px 25px;
-    border-radius: 5px;
-    font-size: 15px;
-    border: none;
-    cursor: pointer;
+.container .menu_li{
+   text-align: center;
 }
-.btn_row button:hover{
-    background-color: var(--hover);
-    transition: .4s;
+.icon i{
+    font-size: 25px;
+    color: var(--grey);
+}
+.text p{
+    font-size: 12px;
+    letter-spacing: 3px;
+    font-weight: 600;
+    color: var(--grey);
 }
