--- a/public/frontend/css/navside.css
+++ b/public/frontend/css/navside.css
@@ -9,7 +9,7 @@
    :root {
     --primary:#0E1B4E;
     --danger: #F70E0E;
-    --grey: #e9e9e9;
+    --grey: #8b8b8b;
     --black: #000000;
     --white:#ffff;
     --hover:#1D1B31;
