--- a/public/frontend/css/etudiant.css
+++ b/public/frontend/css/etudiant.css
@@ -64,3 +64,46 @@
     color: var(--primary) !important;
     font-weight: 700;
 }
+.table_content{
+    background-color: white;
+    margin: 15px 35px 10px 35px;
+    padding: 10px;
+  
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px 1px rgba(7, 7, 7, 0.103);
+}
+.search_row{
+    display: flex;
+    justify-content: flex-end;
+    padding-bottom: 20px;
+    border-bottom: 1px solid var(--grey);
+    margin: 0px 35px;
+}
+.table_content input{
+    height: 35px;
+    border-radius: 3px;
+    border:2px solid var(--primary);
+    padding-left: 10px;
+    color: var(--primary);
+    outline: none;
+}
+thead td{
+   padding: 10px 0px 10px 05px;
+   background-color: var(--primary);
+   color: white;
+   border-radius: 5px;
+   font-weight: 700;
+   font-size: 12px;
+   letter-spacing: 2px;
+}
+table tbody td{
+    text-align: center;
+
+}
+.table_content table{
+    margin: 0 auto;
+    margin-top: 20px;
+    width: 95%;
+}
+
+
