--- a/public/frontend/css/form.css
+++ b/public/frontend/css/form.css
@@ -6,16 +6,36 @@
     border-radius: 5px;
     box-shadow: 0px 0px 10px 1px rgba(7, 7, 7, 0.103);
 }
+form{
+    border-top: 1px solid var(--grey);
+    margin-top: 20px;
+}
 .form .row{
-    display: flex;
-    justify-content: flex-start;
+    
     flex-wrap: wrap;
-    margin: 20px 35px;
+    margin-top: 10px;
+}
+.form .input_row{
+    /* display: flex;
+    flex-wrap: wrap; */
 }
 .form .labels{
     margin-right: 100px;
 }
 .input_group input{
-    width: 200%;
+    width: 100%;
     height: 35px;
+    border-radius: 0px 5px 5px 0px;
+    border: 2px solid rgb(223, 222, 222);
+    padding: 0px 10px;
+    outline: none;
+}
+.input_group .icon i{
+    color: var(--grey);
+    font-size: 20px;
+    padding: 7.5px;
+    background-color: rgb(223, 222, 222);
+}
+.input_group{
+    display: flex;
 }
