--- a/public/frontend/css/form.css
+++ b/public/frontend/css/form.css
@@ -2,49 +2,64 @@
     background-color: white;
     margin: 15px 35px 10px 35px;
     padding: 10px;
-  
+
     border-radius: 5px;
     box-shadow: 0px 0px 10px 1px rgba(7, 7, 7, 0.103);
 }
-<<<<<<< HEAD
-.form .row{
-    display: flex;
-    justify-content: flex-start;
-    flex-wrap: wrap;
-    margin: 20px 35px;
-=======
 form{
     border-top: 1px solid var(--grey);
     margin-top: 20px;
 }
 .form .row{
-    
+
     flex-wrap: wrap;
     margin-top: 10px;
 }
-<<<<<<< HEAD
 
-=======
-.form .input_row{
-    /* display: flex;
-    flex-wrap: wrap; */
->>>>>>> 281603504020ddd1ca5a015d1c4b83b39bd7024d
-}
->>>>>>> 44b2d7557510c70e95d77c46ddb55d9a9e5cb925
 .form .labels{
     margin-right: 100px;
+    margin-top: 15px;
+}
+.col{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
 .input_group input{
-<<<<<<< HEAD
-    width: 200%;
-    height: 35px;
-=======
     width: 100%;
     height: 35px;
     border-radius: 0px 5px 5px 0px;
     border: 2px solid rgb(223, 222, 222);
     padding: 0px 10px;
     outline: none;
+}
+.input_group .select{
+    width: 143%;
+    height: 35px;
+    border-radius: 0px 5px 5px 0px;
+    border: 2px solid rgb(223, 222, 222);
+    padding: 0px 10px;
+    outline: none;
+    background-color: transparent;
+}
+.input_group .input_date{
+    width: 143%;
+    height: 35px;
+    border-radius: 0px 5px 5px 0px;
+    border: 2px solid rgb(223, 222, 222);
+    padding: 0px 10px;
+    outline: none;
+    background-color: transparent;
+}
+.input_group .date{
+    border: none;
+    background-color: transparent;
+}
+.input_group select{
+    border:none;
+    background-color: transparent;
+    width: 100%;
+    margin-top: 5px;
 }
 .input_group .icon i{
     color: var(--grey);
@@ -54,5 +69,26 @@ form{
 }
 .input_group{
     display: flex;
->>>>>>> 281603504020ddd1ca5a015d1c4b83b39bd7024d
+}
+.button{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    padding: 50px 0px;
+}
+.button button{
+    padding: 10px 0;
+    width: 30%;
+    background-color: var(--primary);
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    color: white;
+    font-size: 15px;
+    font-weight: 600;
+
+}
+.button button:hover{
+    background-color: var(--hover);
+    transition:ease-in .3s;
 }
