--- a/public/frontend/css/table.css
+++ b/public/frontend/css/table.css
@@ -2,7 +2,7 @@
     background-color: white;
     margin: 15px 35px 10px 35px;
     padding: 10px;
-  
+
     border-radius: 5px;
     box-shadow: 0px 0px 10px 1px rgba(7, 7, 7, 0.103);
 }
@@ -67,7 +67,7 @@ tbody tr{
     padding: 3px 010px;
     color: white !important;
     font-weight: 600;
-    border-radius: 150px; 
+    border-radius: 150px;
     font-size: 11px !important;
 }
 #btn{
@@ -83,4 +83,7 @@ tbody tr{
 }
 a{
     text-decoration: none;
+}
+.title_bar th{
+    font-size: 10px;
 }
